--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,56 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<style>
+			/* Autofill override — must live outside Svelte scoping to beat UA !important on iOS Chrome */
+			@keyframes autofill-override {
+				0%, 100% {
+					background-color: #000 !important;
+					color: #fff !important;
+					-webkit-text-fill-color: #fff !important;
+				}
+			}
+			input:-webkit-autofill,
+			input:-webkit-autofill:hover,
+			input:-webkit-autofill:focus,
+			input:-webkit-autofill:active,
+			textarea:-webkit-autofill,
+			textarea:-webkit-autofill:hover,
+			textarea:-webkit-autofill:focus,
+			textarea:-webkit-autofill:active,
+			select:-webkit-autofill,
+			select:-webkit-autofill:hover,
+			select:-webkit-autofill:focus,
+			select:-webkit-autofill:active {
+				-webkit-text-fill-color: #fff !important;
+				-webkit-box-shadow: 0 0 0px 9999px #000 inset !important;
+				box-shadow: 0 0 0px 9999px #000 inset !important;
+				background-color: #000 !important;
+				background: #000 !important;
+				color: #fff !important;
+				caret-color: #fff !important;
+				-webkit-appearance: none !important;
+				appearance: none !important;
+				animation: autofill-override 0.01s infinite both !important;
+				-webkit-animation: autofill-override 0.01s infinite both !important;
+				transition: background-color 9999s ease-in-out 0s !important;
+				-webkit-transition: background-color 9999s ease-in-out 0s !important;
+			}
+			input:-internal-autofill-selected,
+			textarea:-internal-autofill-selected {
+				-webkit-text-fill-color: #fff !important;
+				-webkit-box-shadow: 0 0 0px 9999px #000 inset !important;
+				box-shadow: 0 0 0px 9999px #000 inset !important;
+				background-color: #000 !important;
+				background: #000 !important;
+				color: #fff !important;
+				caret-color: #fff !important;
+				-webkit-appearance: none !important;
+				appearance: none !important;
+				animation: autofill-override 0.01s infinite both !important;
+				-webkit-animation: autofill-override 0.01s infinite both !important;
+			}
+		</style>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
